# PySequence

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  bot-config.yaml  compose.api.yaml  compose.bot.yaml  compose.dev.yaml  compose.yaml  justfile  op.env  opencode.json  pyproject.toml
.agents/skills/commit/: SKILL.md
.agents/skills/pr/: SKILL.md
.agents/skills/validate/: SKILL.md
.claude/: settings.json
.claude/commands/: validate.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  publish-client.yml  publish-sdk.yml  publish.yml
.opencode/commands/: commit.md  pr.md
docs/: api-server.md  configuration.md  development.md  docker.md  http-client.md  sdk.md  telegram-bot.md
